# apex

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  utils.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: code-quality-pr.yaml
configs/: main.yaml
configs/extras/: default.yaml
configs/hydra/: default.yaml  evaluate.yaml
configs/logger/: wandb.yaml
configs/paths/: default.yaml
src/: __init__.py
src/data/: __init__.py  _dataloader.py  _sampler.py  loggers.py  transforms.py
src/data/_datasets/: __init__.py  _api.py  _base.py  _imagenet.py  _imagenet_x.py
src/models/: __init__.py  _api.py  _huggingface.py
src/tools/: __init__.py  _api.py  _singletons.py  select.py  transform.py
src/utils/: __init__.py  _console_utils.py  _logging_utils.py  _pkg_resources_utils.py  _torch_utils.py  classes.py  constants.py  decorators.py  extras.py  types.py
tests/: conftest.py  data_test.py  models_test.py  tools_test.py
